@@ -1,5 +1,6 @@
 1.2.0p6
 
+  allow FC4 support - quota struct fix (USC)
   add fix for out of memory failure (USC)
   add file recovery failure messages (USC)
   add direct support for external scheduler extensions
